--- a/git/theme/css/templatemo-blue.css
+++ b/git/theme/css/templatemo-blue.css
@@ -159,6 +159,7 @@ header hr {
 .about {
   background: #fff;
   box-shadow: 0px 1px 5px rgba(50,50,50,0.08);
+  word-break:break-all;
 }
 
 /* skills section */
